# TabEngine

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
scripts/: alphatab-tab-style-patch.cjs  setup-assets.cjs  sync-songsterr.cjs
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  songsterr.rs
src/lib/alphatab/: AlphaTabManager.ts  canvasCoords.ts
src/lib/components/: ControlBar.svelte  LoadingOverlay.svelte  LoopOverlay.svelte  Mixer.svelte  PlaylistSongList.svelte  PlaylistsView.svelte  ScoreViewer.svelte  SettingsDialog.svelte  Sidebar.svelte  SongsterrBrowser.svelte  SongsterrPreview.svelte  SongsterrResultCard.svelte  Titlebar.svelte  TrackChannel.svelte
src/lib/songsterr-downloader/: songsterr-to-alphatab.converter.ts
src/lib/stores/: library.ts  player.ts  playlists.ts  settings.ts  songsterr.ts  tracks.ts
src/lib/types/: index.ts
src/lib/utils/: generalMidi.ts
